fixing last city